Fixing z-index bug on smartphone menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@
 html, body {
 	height: 100%;
 	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
 }
 
 .slideshowBkg {
@@ -47,7 +48,7 @@ h3 {
 		background-color:#292929;
 		color: #FFF;
 		position: fixed;
-		z-index: 5;
+		z-index: 999;
 		width: 100%;
 		height: 100%;
 		bottom:-1000px;
@@ -169,6 +170,48 @@ h3 {
 
 	.footerLinks li {
 		display: inline;
+	}
+
+	/* ACCUEIL */
+
+	.vegas-wrapper {
+		background-color: rgba(0,0,0,0.5);
+	}
+
+	.punchline {
+		text-align: center;
+		color: #FFF;
+	}
+
+	.punchline h2 {
+		font-family: 'intro_head_rbase';
+		font-size: 60px;
+	}
+
+	.rust {
+		font-family: 'intro_rust_gbase'!important;
+	}
+
+	.presentationAccueil {
+		text-align: center;
+		margin: 50px 0;
+	}
+
+	.valeursAccueil img {
+		border-radius: 50%;
+		margin-bottom:30px;
+	}
+
+	.valeursAccueil {
+		text-align: center;
+	}
+
+	.bigButton {
+		font-family: 'intro_head_rbase';
+		color: #FFF;
+		font-size: 24px;
+		margin-top: 100px;
+		margin-bottom:100px;
 	}
 }
 
@@ -313,6 +356,48 @@ h3 {
 		color:#FFF;
 		text-decoration: underline;
 	}
+
+	/* PAGE ACCUEIL */
+
+	.vegas-wrapper {
+		background-color: rgba(0,0,0,0.5);
+	}
+
+	.punchline {
+		text-align: center;
+		color: #FFF;
+	}
+
+	.punchline h2 {
+		font-family: 'intro_head_rbase';
+		font-size: 72px;
+	}
+
+	.rust {
+		font-family: 'intro_rust_gbase'!important;
+	}
+
+	.presentationAccueil {
+		text-align: center;
+		margin: 50px 0;
+	}
+
+	.valeursAccueil img {
+		border-radius: 50%;
+		margin-bottom:30px;
+	}
+
+	.valeursAccueil {
+		text-align: center;
+	}
+
+	.bigButton {
+		font-family: 'intro_head_rbase';
+		color: #FFF;
+		font-size: 24px;
+		margin-top: 100px;
+		margin-bottom:100px;
+	}
 }
 
 /*JS*/
@@ -325,4 +410,10 @@ h3 {
 	top:0;
 	line-height: 65px;
 	background-position: 0 -15px;
-}
+	z-index:999;
+	-moz-box-shadow: 0px 5px 10px 0px #656565;
+	-webkit-box-shadow: 0px 5px 10px 0px #656565;
+	-o-box-shadow: 0px 5px 10px 0px #656565;
+	box-shadow: 0px 5px 10px 0px #656565;
+	filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=10);
+	}
